# pyzotero-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  zot_cli.py
.cursor/rules/: collection_cmds.mdc  error_handling.mdc  exception_handling.mdc  file_cmds.mdc  fulltext_cmds.mdc  general.mdc  group_cmds.mdc  item_cmds.mdc  search_cmds.mdc  stderr_formatting.mdc  tag_cmds.mdc  tests.mdc  util_cmds.mdc  utils.mdc
.github/workflows/: publish.yml  test.yml
pyzotero_cli/: collection_cmds.py  doi.py  file_cmds.py  fulltext_cmds.py  group_cmds.py  item_cmds.py  search_cmds.py  tag_cmds.py  util_cmds.py  utils.py  zot_cli.py
rules_for_ai/: etl_rule.md  zot-read-operations.md  zot-write-operations.md  zot_cli_general.mdc  zot_cli_setup.mdc  zot_read_operations.mdc  zot_write_operations.mdc
tests/: conftest.py  mock_zotero.py  test_collection_cmds.py  test_doi_utils.py  test_file_cmds.py  test_fulltext_cmds.py  test_group_cmds.py  test_item_add_doi_cmd.py  test_item_cmds.py  test_search_cmds.py  test_tag_cmds.py  test_util_cmds.py  test_zot_cli.py
tests/api_responses/: fulltext_doc.json  key_info_doc.json  searches_doc.json
zotcli_commands/: collection_cmds.py  file_cmds.py  item_cmds.py  search_cmds.py  util_cmds.py  utils.py
