[project]
name = "pyzotero-cli"
version = "0.2.0"
description = "Use Zotero from the command line, e.g., for AI-assisted reference / citation management in academic writing — CLI wrapper for pyzotero"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.2.0",
    "pyyaml>=6.0.2",
    "pyzotero>=1.6.11",
    "tabulate>=0.9.0",
    "pytest>=9.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[project.scripts]
zot = "pyzotero_cli.zot_cli:zot"

[tool.setuptools.packages.find]
include = ["pyzotero_cli"]

[tool.pytest.ini_options]
markers = [
    "live: marks tests requiring live Zotero API credentials",
]
addopts = "-m 'not live'"

[tool.uv]
package = true